inicio da barra lateral

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,7 +9,21 @@
   </head>
   <body>
     <main>
-      <div class="container"> rafa
+      <div class="container">
+        <div class="barra-lateral">
+          <ul class="desligar">
+            <li>icone de desligar</li>
+          </ul>
+          <ul class="icones-variados">
+            <li>chatballon</li>
+            <li>user</li>
+            <li>dashboard</li>
+          </ul>
+          <ul class="icones-dois">
+            <li>engrenagem</li>
+            <li>menu</li>
+          </ul>
+        </div>
 
       </div>
     </main>
