--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Chat App UI Design</title>
   </head>
   <body>
@@ -12,16 +16,16 @@
       <div class="container">
         <div class="barra-lateral">
           <ul class="desligar">
-            <li>icone de desligar</li>
+            <li><a href="#"><i class="material-icons">power_settings_new</i></a></li>
           </ul>
           <ul class="icones-variados">
-            <li>chatballon</li>
-            <li>user</li>
-            <li>dashboard</li>
+            <li><a href="#"><i class="material-icons">chat_bubble_outline</i></a></li>
+            <li><a href="#"><i class="fas fa-user"></i></a></li>
+            <li><a href="#"><i class="fas fa-th-large"></i></a></li>
           </ul>
           <ul class="icones-dois">
-            <li>engrenagem</li>
-            <li>menu</li>
+            <li><a href="#"><i class="fas fa-cog"></i></a></li>
+            <li><a href="#"><i class="fas fa-bars"></i></a></li>
           </ul>
         </div>
 
