--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
           </ul>
         </div>
 
+        <div class="barra-busca-perfil">
+          <div class="barramento">
+            <input type="text" placeholder="Pesquisar" />
+            <i class="material-icons">search</i>
+
+          </div>
+        </div>
+
       </div>
     </main>
    
