--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="barra-busca-perfil">
           <div class="barramento">
-            <input type="text" placeholder="Pesquisar" />
+            <input type="text" placeholder="Search contact, messages or options here." />
             <i class="material-icons">search</i>
 
           </div>
