--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
 
         <div class="barra-busca-perfil">
           <div class="barramento">
+            <!-- <input type="text" placeholder="Search contact, messages or options here." />
+            <i class="material-icons">search</i> -->
+            <div class="input-container"> <!-- Nova div container -->
             <input type="text" placeholder="Search contact, messages or options here." />
             <i class="material-icons">search</i>
+            </div>
 
           </div>
         </div>
