--- a/index.html
+++ b/index.html
@@ -29,17 +29,14 @@
           </ul>
         </div>
 
-        <div class="barra-busca-perfil">
-          <div class="barramento">
-            <!-- <input type="text" placeholder="Search contact, messages or options here." />
-            <i class="material-icons">search</i> -->
-            <div class="input-container"> <!-- Nova div container -->
-            <input type="text" placeholder="Search contact, messages or options here." />
-            <i class="material-icons">search</i>
-            </div>
-
-          </div>
-        </div>
+      <div class="barra-busca-perfil">
+  <div class="barramento">
+    <div class="input-container">
+      <input type="text" placeholder="Search contact, messages or options here." />
+      <i class="material-icons">search</i>
+    </div>
+  </div>
+</div>
 
       </div>
     </main>
