--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
       <input type="text" placeholder="Search contact, messages or options here." />
       <i class="material-icons">search</i>
     </div>
+     <div class="perfil-papudo">
+    <ul>
+      <li><h2>Bafo de Sardinha</h2></li>
+      <li>esfera</li>
+    </ul>
+  </div>
+ 
   </div>
 </div>
 
