--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" 
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>Chat App UI Design</title>
   </head>
   <body>
@@ -16,37 +24,55 @@
       <div class="container">
         <div class="barra-lateral">
           <ul class="desligar">
-            <li><a href="#"><i class="material-icons">power_settings_new</i></a></li>
+            <li>
+              <a href="#"><i class="material-icons">power_settings_new</i></a>
+            </li>
           </ul>
           <ul class="icones-variados">
-            <li><a href="#"><i class="material-icons">chat_bubble_outline</i></a></li>
-            <li><a href="#"><i class="fas fa-user"></i></a></li>
-            <li><a href="#"><i class="fas fa-th-large"></i></a></li>
+            <li>
+              <a href="#"><i class="material-icons">chat_bubble_outline</i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-user"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-th-large"></i></a>
+            </li>
           </ul>
           <ul class="icones-dois">
-            <li><a href="#"><i class="fas fa-cog"></i></a></li>
-            <li><a href="#"><i class="fas fa-bars"></i></a></li>
+            <li>
+              <a href="#"><i class="fas fa-cog"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-bars"></i></a>
+            </li>
           </ul>
         </div>
 
-      <div class="barra-busca-perfil">
-  <div class="barramento">
-    <div class="input-container">
-      <input type="text" placeholder="Search contact, messages or options here." />
-      <i class="material-icons">search</i>
-    </div>
-     <div class="perfil-papudo">
-    <ul>
-      <li><h2>Bafo de Sardinha</h2></li>
-      <li>esfera</li>
-    </ul>
-  </div>
- 
-  </div>
-</div>
-
+        <div class="barra-busca-perfil">
+          <div class="barramento">
+            <div class="input-container">
+              <input
+                type="text"
+                placeholder="Search contact, messages or options here."
+              />
+              <i class="material-icons">search</i>
+            </div>
+            <div class="perfil">
+              <div class="perfil-data">
+                <h2>John Mattews</h2>
+                <p>Online</p>
+              </div>
+              <img src="https://png.pngtree.com/png-vector/20240720/ourlarge/pngtree-a-brown-and-white-cat-with-face-background-png-image_13161418.png" 
+              alt="Gato" 
+              width="50" 
+              height="50"
+              style="object-fit: cover; border-radius: 50%;">
+>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
-   
   </body>
 </html>
