--- a/index.html
+++ b/index.html
@@ -72,6 +72,75 @@
             </div>
           </div>
         </div>
+        <!-- aqui -->
+         <div class="chat-container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <ul class="contact-list">
+        <li class="contact active">
+          <img src="nicolas.jpg" alt="Nicolas Klaus">
+          <div class="info">
+            <strong>Nicolas Klaus</strong>
+            <small>Great shots on Dribbble!</small>
+          </div>
+          <time>12:35</time>
+        </li>
+        <!-- Repetir itens de contato conforme imagem -->
+      </ul>
+    </aside>
+
+    <!-- Main Chat -->
+    <section class="chat-main">
+      <header class="chat-header">
+        <div class="profile">
+          <img src="nicolas.jpg" alt="Nicolas Klaus">
+          <div>
+            <h2>Nicolas Klaus</h2>
+            <small>Online</small>
+          </div>
+        </div>
+        <div class="actions">
+          <button class="icon video"></button>
+          <button class="icon phone"></button>
+          <button class="icon file"></button>
+        </div>
+      </header>
+
+      <div class="messages">
+        <div class="message received">
+          <img src="jonas.jpg" alt="Sender">
+          <div class="bubble">Great shots on Dribbble!</div>
+          <time>12:44</time>
+        </div>
+        <div class="message sent">
+          <time>12:45</time>
+          <div class="bubble">Thank you, how are you?</div>
+          <img src="you.jpg" alt="You">
+        </div>
+        <div class="message received">
+          <img src="jonas.jpg" alt="Sender">
+          <div class="bubble">Thank you for asking, I'm fine... check it out.</div>
+          <time>12:48</time>
+        </div>
+        <div class="message sent">
+          <time>12:50</time>
+          <div class="bubble">Wow mate, that sounds cool...</div>
+          <img src="you.jpg" alt="You">
+        </div>
+      </div>
+
+      <footer class="chat-input">
+        <span>Nicolas is typing...</span>
+        <div class="input-area">
+          <textarea placeholder="Type your message here..."></textarea>
+          <button class="icon emoji"></button>
+          <button class="icon add"></button>
+          <button class="icon send"></button>
+        </div>
+      </footer>
+    </section>
+  </div>
+        <!-- fim aqui --> 
       </div>
     </main>
   </body>
