--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <aside class="sidebar">
       <ul class="contact-list">
         <li class="contact active">
-          <img src="nicolas.jpg" alt="Nicolas Klaus">
+          <img src="https://png.pngtree.com/png-vector/20240720/ourlarge/pngtree-a-brown-and-white-cat-with-face-background-png-image_13161418.png" alt="Nicolas Klaus">
           <div class="info">
             <strong>Nicolas Klaus</strong>
             <small>Great shots on Dribbble!</small>
@@ -93,7 +93,7 @@
     <section class="chat-main">
       <header class="chat-header">
         <div class="profile">
-          <img src="nicolas.jpg" alt="Nicolas Klaus">
+          <img src="https://png.pngtree.com/png-vector/20240720/ourlarge/pngtree-a-brown-and-white-cat-with-face-background-png-image_13161418.png" alt="Nicolas Klaus">
           <div>
             <h2>Nicolas Klaus</h2>
             <small>Online</small>
@@ -108,24 +108,24 @@
 
       <div class="messages">
         <div class="message received">
-          <img src="jonas.jpg" alt="Sender">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN2zOSTtm5b0uRhUWwh7I708XUdROQARG9Lg&s" alt="Sender">
           <div class="bubble">Great shots on Dribbble!</div>
           <time>12:44</time>
         </div>
         <div class="message sent">
           <time>12:45</time>
           <div class="bubble">Thank you, how are you?</div>
-          <img src="you.jpg" alt="You">
+          <img src="https://png.pngtree.com/png-vector/20240720/ourlarge/pngtree-a-brown-and-white-cat-with-face-background-png-image_13161418.png" alt="You">
         </div>
         <div class="message received">
-          <img src="jonas.jpg" alt="Sender">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN2zOSTtm5b0uRhUWwh7I708XUdROQARG9Lg&s" alt="Sender">
           <div class="bubble">Thank you for asking, I'm fine... check it out.</div>
           <time>12:48</time>
         </div>
         <div class="message sent">
           <time>12:50</time>
           <div class="bubble">Wow mate, that sounds cool...</div>
-          <img src="you.jpg" alt="You">
+          <img src="https://png.pngtree.com/png-vector/20240720/ourlarge/pngtree-a-brown-and-white-cat-with-face-background-png-image_13161418.png" alt="You">
         </div>
       </div>
 
