--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <section class="area-chat-principal">
               <header class="cabecalho-chat">
                 <div class="perfil-chat">
-                  <img src="https://placehold.co/38x38/FFFFFF/1A1A1A?text=NK&font=roboto" alt="Nicolas Klaus" class="avatar-perfil-chat">
+                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN2zOSTtm5b0uRhUWwh7I708XUdROQARG9Lg&s" alt="Nicolas Klaus" class="avatar-perfil-chat">
                   <div>
                     <h2 class="nome-perfil-chat">Nicolas Klaus</h2>
                     <small class="status-perfil-chat">Online</small>
